--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -1,3 +1,15 @@
+.stacked-input {
+  padding-top: 10px;
+  top: 50%; }
 
+.stacked-btn-xs {
+  padding-top: 17px; }
+
+.first-stacked-btn-xs {
+  padding-top: 6px; }
+
+.snapshotGrid {
+  width: 100%;
+  height: 1024px; }
 
 /*# sourceMappingURL=main.css.map */
