--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -1,1 +1,14 @@
-
+.stacked-input {
+    padding-top: 10px;
+    top: 50%;
+}
+.stacked-btn-xs {
+    padding-top: 17px;
+}
+.first-stacked-btn-xs {
+    padding-top: 6px;
+}
+.snapshotGrid {
+    width: 100%;
+    height: 1024px;
+}
